# fastapi-throttle

./: README.md  fastapi_throttle.py  pyproject.toml
fastapi_throttle/: __init__.py  __init__.pyi
